Fix issue with scrollbar shifting page

--- a/homepage/static/homepage/base.css
+++ b/homepage/static/homepage/base.css
@@ -1,3 +1,6 @@
+html {
+	overflow-y: overlay;
+}
 
 body {
 	margin: 0;
